app/assets/stylesheets/application.scss
@import 'bootstrap-sprockets';
@import 'bootstrap';
@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
@import "social-share-button";

$primary-color: #399ED4;
$category-border-color: #eee;
$category-color: gray;
$sidebar-top-font-color: #333;
$separator-color: #cbcbcb;

a {
  &:hover, &:link, &:visited, &:active{
    text-decoration: none;
  }
}

input[type=text], input[type=email], input[type=password], input[type=number] {
  @extend .form-control;
}

input[type=submit] {
  @extend .btn, .btn-primary;
  background-color: $primary-color;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.button {
  @extend .btn, .btn-default;
  color: $primary-color;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 1px;
}

form>div.actions{
  display: flex;
  flex-direction: row-reverse;
}

/* header */
.header {
  display: flex;
  padding-bottom: 3px;
  border-style: solid;
  border-color: $primary-color;
  border-width: 0px 0px 2px;
  margin-top: 20px;
}

.dropdown-toggle {
  cursor: pointer;
}

.header-right {
  margin-left: auto;
  margin-top: 10px;
  display: flex;
  .shopping-cart {
    .shopping-cart__image {
      margin-right: 5px;
    }
    .shopping-cart__count {
      margin-right: 15px;
      font-size: 20px;
    }
  }

  .header-right__menu {
    display: flex;
    .header-right__menu__login {
      display: flex;
      font-size:20px;
      align-items: center;
      :first-child {
        margin-right: 20px;
      }
    }
    .header-profile-image {
      border-radius: 50%;
      border-style: solid;
      border-width: 1px;
      margin-right: 10px;
    }
    .account-header-menu {
    }
  }
}

.login-options-section {
  margin-top: 10px;
  margin-left: 10px;
}

.login-options-section a {
  font-size: 25px;
}

.page-middle {
  margin-top: 20px;
}

/* categories list */

.sidebar-list, .sidebar-item, .category_line {
  padding: 0px;
  margin: 0px;
  list-style: none;
}

.sidebar {
  font-family: 'Montserrat', sans-serif;
  border-right: 1px solid $separator-color;
}

.category_line {
  position: relative;
}

.category_list {
  padding: 0px;
  margin-left: 10px;
  list-style: none;
  display: none;
}

.category_arrow {
  float: right;
  padding: 2px 8px;
  position: absolute;
  top: 0;
  right: 0;
}

.category_link {
  border-bottom: 1px solid $category-border-color;
  border-right: 1px solid $category-border-color;
  padding: 2px 4px 2px;
}

.category_link, .category_arrow {
  display: block;
  color: $category-color;
  &:hover {
    background-color: $primary-color;
    color: white;
  }
}

.sidebar_top_item {
  color: $sidebar-top-font-color;
}

.separator {
  border-bottom: 1px solid $separator-color;
}

.add_to_cart {
  background-color: $primary-color;
}

.product-listing-item {
  @extend .col-sm-3;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5px;
  transition: all 0.05s ease-in;
  height: 350px;
  &:hover {
    -webkit-box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
    -moz-box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
    box-shadow: 0px 2px 6px 3px rgba(199,199,199,1);
  }
}

.field {
  @extend .form-group;
}

.default-panel {
  @extend .panel, .panel-default;
  border-radius: 10px;
  border-top: 4px solid $primary-color;
  padding: 10px;
}

.header-text {
  color: $primary-color;
}

div>.per_page {
  .per_page_field {
    max-width: 100px;
    display: inline;
  }
  margin: 20px 0px;
  padding: 20px 0px;
}

.navbar {
  border-bottom: 1px solid $separator-color;
}

.product-images-panel {
  @extend .col-sm-3;
}

.product-description-panel {
  @extend .col-sm-7;
}

.product-price-panel {
  @extend .col-sm-2, .panel, .panel-default;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 20px;
}

.product-sku {
  font-family: 'Montserrat';
  color: #777;
}

.product-description > :first-child::before {
  content: "Description: ";
  font-weight: bold;
}

.product-right-table {
  border-top: 1px solid lightgray;
  border-bottom: 1px solid lightgray;
  margin-bottom: 10px;
  margin-top: 15px;
}

.product-right-table>tbody>tr>td {
  &:first-child {
    border-right: 1px solid lightgray;
    text-align: right;
    #product_qty {
      text-align: right;
    }
  }
  padding: 5px;
}

.cart_item {
  @extend .row;
  border-top: 1px solid lightgray;
  padding-top: 5px;
  .cart_item__picture {
    @extend .col-sm-2;
    &>img {
      @extend .center-block;
    }
  }
  .cart_item__info {
    @extend .col-sm-8;
    font-family: 'Montserrat';
    .cart_item__product {
      @extend .col-sm-9;
      display: flex;
      flex-direction: column;
    }
    .cart_item__price {
      @extend .col-sm-3;
    }
  }
  .cart_item__options {
    @extend .col-sm-2;
    display: flex;
    &>*:first-child {
      margin-right: 5px;
    }
  }
}

.cart_footer {
	margin-top: 20px;
  border-top: 1px solid $category-border-color;
	padding-top: 20px;
	display: flex;
	align-items: center;
	justify-content: flex-end;
	.cart_footer__subtotal {
		font-size: 20px;
		font-weight: bold;
		margin-right: 5px;
	}
}

nav.navbar {
	min-height: 40px;
	font-family: 'Montserrat';
}

.navbar-nav>li>a {
	line-height: 8px;
}

.search {
  color: #aaa;
}

.search input {
	@extend .form-control;
  width: 150px;
  text-indent: 20px;
  transition: all 0.2s;
	margin-top: 1px;
	&:focus {
		width: 200px;
	}
}

.search>span.glyphicon {
  position: absolute;
  top: 10px;
  left: 10px;
}

